<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="valor_da_conta">Account Value</string>
    <string name="falar">Speak</string>
    <string name="n_mero_de_pessoas">Number of People</string>
    <string name="compartilhar">Share</string>
    <string name="vamos_rachar">LETS RACHAR!</string>
    <string name="logo_description">Application Logo</string>
    <string name="compartilhar_description">Share</string>
    <string name="falar_description">Speak</string>
    <string name="logo">Logo</string>
    <string name="valor_por_pessoa">Price per person: %1$s</string>
    <string name="preencha_campos">Fill in the bill amount and the number of people.</string>
    <string name="valor_invalido">Invalid value</string>
    <string name="idioma_nao_suportado">Language not supported for Text-to-Speech</string>
    <string name="compartilhar_via">Share via</string>
</resources>