<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/logo_size"
        android:maxHeight="@dimen/logo_size"
        android:src="@drawable/ic_launcher_background"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/vamos_rachar"
        android:textSize="@dimen/title_text_size" />

    <EditText
        android:id="@+id/edtValorConta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@id/txtTitulo"
        android:layout_marginHorizontal="@dimen/edittext_margin_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/valor_da_conta"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtNumeroPessoas"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@id/edtValorConta"
        android:layout_margin="@dimen/edittext_margin_horizontal"
        android:hint="@string/n_mero_de_pessoas"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@id/edtNumeroPessoas"
        android:layout_margin="@dimen/result_margin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtResultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/btnCompartilhar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/compartilhar_description"
            android:maxWidth="@dimen/button_size"
            android:maxHeight="@dimen/button_size"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_compartilhar" />

        <ImageButton
            android:id="@+id/btnFalar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_start"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/falar_description"
            android:maxWidth="@dimen/button_size"
            android:maxHeight="@dimen/button_size"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_falar" />
    </LinearLayout>
</RelativeLayout>
